apps/onetapsoccer/base/onetapsoccerexporter-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: metrics-exporter-jvm
  namespace: onetapsoccer
  labels:
    app: metrics-exporter-jvm
    app.kubernetes.io/component: metrics-exporter-jvm
    app.kubernetes.io/instance: metrics-exporter-jvm
    app.kubernetes.io/name: metrics-exporter-jvm
    app.kubernetes.io/part-of: onetapsoccer-app
    app.openshift.io/runtime: quarkus
    app.openshift.io/runtime-namespace: onetapsoccer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics-exporter-jvm
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: metrics-exporter-jvm
        deployment: metrics-exporter-jvm
    spec:
      containers:
        - name: metrics-exporter-jvm
          image: >-
            quay.io/vflorent/one-tap-soccer-metrics-exporter
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
